tests/src/frontend/typechecking/invalid/frozen_memo_met_1.sk
mutable class Foo(mutable v: Foo) {
  memoized readonly fun no(): void {
    void
  }
}
